add footer svg + copy to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,9 +57,7 @@
                 <div class="portfolio-nav">
                     <h2 class="visually-hidden">Виды наших работ</h2>
                     <ul class="portfolio-button list">
-                        <li class="button-link">
-                            <button class="button-works button-current pointer">Все</button>
-                        </li>
+                        <li class="button-link"><button class="button-works button-current pointer">Все</button></li>
                         <li class="button-link"><button class="button-works pointer">Веб-сайты</button></li>
                         <li class="button-link"><button class="button-works pointer">Приложения</button></li>
                         <li class="button-link"><button class="button-works pointer">Дизайн</button></li>
@@ -144,7 +142,7 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/boxes.jpg" alt="печатает на клавиатуре" width="370" />
+                        <a href="" class="link"><img src="./images/growing.jpg" alt="печатает на клавиатуре" width="370" />
                             <div class="works-item-bottom">
                                 <h3 lang="en" class="portfolio-title">Growing Business</h3>
                                 <p class="portfolio-text">Приложение</p>
@@ -158,20 +156,56 @@
 
     <!-- section footer -->
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" lang="en" class="footer-logo link">Web<span class="logo-accent-footer">Studio</span>
-        </a>
-            <address>
-          <ul>
-            <li class="footer-map list footer-adress">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="list footer-adress">
-              <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
-            </li>
-            <li class="list footer-adress">
-              <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <div class="container footer-container">
+            <div>
+                <a href="./index.html" lang="en" class="footer-logo link">Web<span class="logo-accent-footer">Studio</span>
+                </a>
+                <address>
+                    <ul>
+                        <li class="footer-map list footer-adress">г. Киев, пр-т Леси Украинки, 26</li>
+                        <li class="list footer-adress">
+                            <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
+                        </li>
+                        <li class="list footer-adress">
+                            <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="footer-socials">
+                <h3 class="footer-socials-title">присоединяйтесь</h3>
+                <ul class="footer-socials-list list">
+                    <li>
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+								<use href="./images/icons.svg#icon-instagram"></use>
+							</svg>
+                        </a>
+                    </li>
+                    <li class="list footer-social">
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+								<use href="./images/icons.svg#icon-twitter"></use>
+							</svg>
+                        </a>
+                    </li>
+                    <li class="list footer-social">
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+								<use href="./images/icons.svg#icon-facebook"></use>
+							</svg>
+                        </a>
+                    </li>
+                    <li class="list footer-social">
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+								<use href="./images/icons.svg#icon-linkedin"></use>
+							</svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
