--- a/index.html
+++ b/index.html
@@ -145,29 +145,29 @@
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-instagram"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-instagram"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-twitter"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-twitter"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-facebook"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-facebook"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-linkedin"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-linkedin"></use>
+										</svg>
                                     </a>
                                 </li>
                             </ul>
@@ -183,29 +183,29 @@
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-instagram"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-instagram"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-twitter"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-twitter"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-facebook"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-facebook"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-linkedin"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-linkedin"></use>
+										</svg>
                                     </a>
                                 </li>
                             </ul>
@@ -221,29 +221,29 @@
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-instagram"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-instagram"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-twitter"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-twitter"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-facebook"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-facebook"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-linkedin"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-linkedin"></use>
+										</svg>
                                     </a>
                                 </li>
                             </ul>
@@ -258,29 +258,29 @@
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-instagram"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-instagram"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-twitter"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-twitter"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-facebook"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-facebook"></use>
+										</svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-												<use href="./images/icons.svg#icon-linkedin"></use>
-											</svg>
+											<use href="./images/icons.svg#icon-linkedin"></use>
+										</svg>
                                     </a>
                                 </li>
                             </ul>
@@ -299,43 +299,43 @@
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-									<use href="./images/icons.svg#icon-logo-1"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-logo-1"></use>
+							</svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-									<use href="./images/icons.svg#icon-logo-2"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-logo-2"></use>
+							</svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-									<use href="./images/icons.svg#icon-logo-3"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-logo-3"></use>
+							</svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-									<use href="./images/icons.svg#icon-logo-4"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-logo-4"></use>
+							</svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-									<use href="./images/icons.svg#icon-logo-5"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-logo-5"></use>
+							</svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-									<use href="./images/icons.svg#icon-logo-6"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-logo-6"></use>
+							</svg>
                         </a>
                     </li>
 
@@ -344,54 +344,57 @@
 
     <!-- section footer -->
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" lang="en" class="footer-logo link">Web<span class="logo-accent-footer">Studio</span>
-        </a>
-            <address>
-            <ul>
-            <li class="footer-map list footer-adress">г. Киев, пр-т Леси Украинки, 26</li>
-            <li class="list footer-adress">
-                <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
-            </li>
-            <li class="list footer-adress">
-                <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
-            </li>
-            </ul>
-        </address>
+        <div class="container footer-container">
+            <div>
+                <a href="./index.html" lang="en" class="footer-logo link">Web<span class="logo-accent-footer">Studio</span>
+                </a>
+                <address>
+                    <ul>
+                        <li class="footer-map list footer-adress">г. Киев, пр-т Леси Украинки, 26</li>
+                        <li class="list footer-adress">
+                            <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
+                        </li>
+                        <li class="list footer-adress">
+                            <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
             <div class="footer-socials">
                 <h3 class="footer-socials-title">присоединяйтесь</h3>
                 <ul class="footer-socials-list list">
                     <li>
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-									<use href="./images/icons.svg#icon-instagram"></use>
-								</svg>
-                        </a>
-                    </li>
-
-                    <li class="list footer-social">
-                        <a class="footer-socials-link link" href="">
-                            <svg class="footer-icon" width="20" height="20">
-									<use href="./images/icons.svg#icon-twitter"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-instagram"></use>
+							</svg>
                         </a>
                     </li>
                     <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-									<use href="./images/icons.svg#icon-facebook"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-twitter"></use>
+							</svg>
                         </a>
                     </li>
                     <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-									<use href="./images/icons.svg#icon-linkedin"></use>
-								</svg>
+								<use href="./images/icons.svg#icon-facebook"></use>
+							</svg>
+                        </a>
+                    </li>
+                    <li class="list footer-social">
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+								<use href="./images/icons.svg#icon-linkedin"></use>
+							</svg>
                         </a>
                     </li>
                 </ul>
             </div>
+        </div>
     </footer>
 </body>
 
